✨ Add  rive DetailButton

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rive-app/react-canvas": "^4.8.1",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.32",
     "framer-motion": "^10.18.0",
